animations working, next next is collision detection and shooting lazers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
             position: relative;
         }
         #canvas {
+          display: block;
+          margin: 0 auto;
           position: absolute;
           top: 0;
           left: 0;
@@ -18,9 +20,9 @@
         }
     </style>
   </head>
-  <body>
+  <body >
      <canvas id="canvas" width="300" height="300" style="border:5px solid #000000;"></canvas>
       <canvas id="canvas2" width="300" height="300" style="border:5px solid #000000;"></canvas> 
-    <script src="./script.js"></script>
+    <script src="./script2.js"></script>
   </body>
 </html>
