--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body >
-     <canvas id="canvas" width="300" height="300" style="border:5px solid #000000;"></canvas>
+     <canvas id="canvas"  style="border:5px solid white;"></canvas>
       <canvas id="canvas2" width="300" height="300" style="border:5px solid #000000;"></canvas> 
     <script src="./script2.js"></script>
   </body>
