space ship redrawn/recoded; space-ship now moves left and right and shoots lasers according to its postion, the collision detection currentlly detecting collision between ship and meteor

--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
             position: relative;
         }
         #canvas {
-          display: block;
-          margin: 0 auto;
           position: absolute;
           top: 0;
           left: 0;
           z-index: 99;
         }
-        #canvas2{
+        #canvas3 {
           z-index: 98;
         }
+        #canvas2{
+          z-index: 97;
+        }
+       
+
     </style>
   </head>
   <body >
      <canvas id="canvas"  style="border:5px solid white;"></canvas>
-      <canvas id="canvas2" width="300" height="300" style="border:5px solid #000000;"></canvas> 
-    <script src="./script2.js"></script>
+     <!-- <canvas id="canvas3"  style="border:5px solid pink;"></canvas>  -->
+     <canvas id="canvas2"  style="border:5px solid #000000;"></canvas> 
+    <script src="./script.js"></script>
   </body>
 </html>
