changed ship images, added bigger meteors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Animations Code-along</title>
+    <title>Asteroids in Galatica</title>
     <style>
         body{
             margin: 0 auto;
