lazer in no long just a green block but an img that resembles a lazer, few bug fixes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Asteroids in Galatica</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <style>
         body{
             margin: 0 auto;
             position: relative;
+            background: #000;
+            font-family: 'Press Start 2P', cursive;
+
+
         }
         #canvas {
           position: absolute;
@@ -24,9 +30,9 @@
     </style>
   </head>
   <body >
-     <canvas id="canvas"  style="border:5px solid white;"></canvas>
+     <canvas id="canvas"></canvas>
      <!-- <canvas id="canvas3"  style="border:5px solid pink;"></canvas>  -->
-     <canvas id="canvas2"  style="border:5px solid #000000;"></canvas> 
+     <canvas id="canvas2"></canvas> 
     <script src="./script.js"></script>
   </body>
 </html>
