--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Asteroids in Galatica</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet"> 
 
     <style>
@@ -9,10 +10,13 @@
             margin: 0 auto;
             position: relative;
             background: #000;
-            font-family: 'Press Start 2P', cursive;
+            color: #fff;
+            text-align: center;
+            font-family: 'Audiowide', cursive;
 
 
         }
+        .nav{visibility: hidden;}
         #canvas {
           position: absolute;
           top: 0;
@@ -30,9 +34,30 @@
     </style>
   </head>
   <body >
-     <canvas id="canvas"></canvas>
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="canvas-tab" data-toggle="tab" href="#can" role="tab" aria-controls="can" aria-selected="false">Profile</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <h1>Asteroids in Galatica</h1>
+            <button id="startEngine" type="button" class="btn btn-light btn-lg">Play Game</button>
+          </div>
+          <div class="tab-pane fade" id="can" role="tabpanel" aria-labelledby="canvas-tab">
+              <canvas id="canvas"></canvas>
      <!-- <canvas id="canvas3"  style="border:5px solid pink;"></canvas>  -->
      <canvas id="canvas2"></canvas> 
+          </div>
+          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+        </div>
+   
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
   </body>
 </html>
