--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
           <li class="nav-item">
             <a class="nav-link" id="canvas-tab" data-toggle="tab" href="#can" role="tab" aria-controls="can" aria-selected="false">Profile</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" id="win-tab" data-toggle="tab" href="#win" role="tab" aria-controls="win" aria-selected="false">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="lose-tab" data-toggle="tab" href="#lose" role="tab" aria-controls="lose" aria-selected="false">Profile</a>
+              </li>
         </ul>
         <div class="tab-content" id="myTabContent">
           <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
@@ -51,6 +57,15 @@
               <canvas id="canvas"></canvas>
      <!-- <canvas id="canvas3"  style="border:5px solid pink;"></canvas>  -->
      <canvas id="canvas2"></canvas> 
+          </div>
+          <div class="tab-pane fade" id="win" role="tabpanel" aria-labelledby="win-tab">
+              <h1>Congrats you cleared the asteroid field!</h1>
+              <h3>Highscore: <span class="highscore"></span></h3>
+          </div>
+          <div class="tab-pane fade" id="lose" role="tabpanel" aria-labelledby="lose-tab">
+              <h1>You Suck!</h1>
+              <p>You failed to clear the asteroid field</p>
+              <h3>Highscore: <span class="highscore"></span></h3>
           </div>
           <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
         </div>
