winning page and losing page now display highscore

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
           </div>
           <div class="tab-pane fade" id="win" role="tabpanel" aria-labelledby="win-tab">
               <h1>Congrats you cleared the asteroid field!</h1>
-              <h3>Highscore: <span class="highscore"></span></h3>
+              <h3>Highscore: <span id="highscore2"></span></h3>
           </div>
           <div class="tab-pane fade" id="lose" role="tabpanel" aria-labelledby="lose-tab">
               <h1>You Suck!</h1>
               <p>You failed to clear the asteroid field</p>
-              <h3>Highscore: <span class="highscore"></span></h3>
+              <h3>Highscore: <span id="highscore"></span></h3>
           </div>
           <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
         </div>
