--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
          padding: 1rem;
          margin: 2rem 0;
        }
-
+      #home,#result{
+        padding:  5rem;
+        margin: 2rem;
+        border: 1px solid white;
+        border-radius: 10px;
+      }
     </style>
   </head>
   <body >
