--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Asteroids in Galatica</title>
+    <title>Asteroids in Galactica</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet"> 
 
@@ -15,6 +15,9 @@
             font-family: 'Audiowide', cursive;
 
 
+        }
+        .btn-lg {
+          padding: 1rem 8rem;
         }
         .nav{visibility: hidden;}
         #canvas {
@@ -31,7 +34,20 @@
         }
        h1,h2,h3{
          padding: 1rem;
-         margin: 2rem 0;
+         margin: .5rem 0;
+       }
+       #myTabContent{
+         position: relative;
+       }
+       #title {
+         position: absolute;
+         background: #000;
+         padding: 1rem 0;;
+         border: 1px solid white;
+         border-radius: 10px;
+         top: -30;
+         left: 25%;
+         right: 25%;
        }
       #home,#result{
         padding:  5rem;
@@ -39,15 +55,67 @@
         border: 1px solid white;
         border-radius: 10px;
       }
+      .mission p {
+        font-size: 1.5rem;
+        padding: 0 2rem;
+        margin: 0;
+      }
+      #a-instructions{
+        font-family:  Helvetica, sans-serif;
+      }
+      #a-instructions p {
+
+        text-align: left;
+        padding-left: 2rem;
+      }
+      #a-instructions ul li {
+        list-style: none;
+        display: inline;
+       width: 25%;
+      }
+      #a-instructions .row {
+        margin: 1rem;
+      }
+      
     </style>
   </head>
   <body >
         <div class="tab-content" id="myTabContent">
+            <h1 id="title">Asteroids in Galactica</h1>
           <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <h1>Asteroids in Galatica</h1>
+            <div class="mission">
+            <p>Lost in Galactica the spacecraft SC Chimera has encountered an overwhelming field of asteroids. 
+              As captain of the ship it is your duty to destroy all incoming asteroids and navigate your crew to safety.</p>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div id="a-instructions" class="col-sm-6">
+                  <h3>Asteroids</h3>
+                  <p>In this asteroid field we have small and large asteriods all causing damage depending on how long the collision last</p>
+                  <p>If you collide with an asteroid you can evade more damage by flying away</p>
+                  <div class="row">
+                    <div class="col-6 p-0">
+                      <img src="asteroid.svg" width="50px" height="50px">
+                    </div>
+                    <div class="col-6 p-0">
+                      <p>Causes 1-2 Damage</p>
+                      <p>+10 Points</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6 p-0">
+                      <img src="asteroid.svg" width="100px" height="100px">
+                    </div>
+                    <div class="col-6 p-0">
+                      <p>Causes 2-3 Damage</p>
+                      <p>+30 Points</p>
+                    </div>
+                  </div>
+              </div>
+            </div>
             <button id="startEngine" type="button" class="btn btn-light btn-lg">Play Game</button>
           </div>
-
+        </div>
 
           <div class="tab-pane fade" id="can" role="tabpanel" aria-labelledby="canvas-tab">
               <canvas id="canvas"></canvas>
