--- a/index.html
+++ b/index.html
@@ -4,81 +4,8 @@
     <title>Asteroids in Galactica</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Audiowide&display=swap" rel="stylesheet"> 
-
-    <style>
-        body{
-            margin: 0 auto;
-            position: relative;
-            background: #000;
-            color: #fff;
-
-
-        }
-        body, .lead{
-
-          text-align: center;
-          font-family: 'Audiowide', cursive;
-        }
-        .btn-lg {
-          padding: 1rem 8rem;
-        }
-        .nav{visibility: hidden;}
-        #canvas {
-          position: absolute;
-          top: 0;
-          left: 0;
-          z-index: 99;
-        }
-        #canvas3 {
-          z-index: 98;
-        }
-        #canvas2{
-          z-index: 97;
-        }
-       h1,h2,h3{
-         padding: 1rem;
-         margin: .5rem 0;
-       }
-       #myTabContent{
-         position: relative;
-       }
-       #title {
-         position: absolute;
-         background: #000;
-         padding: 1rem 0;;
-         border: 1px solid white;
-         border-radius: 10px;
-         top: -30;
-         left: 25%;
-         right: 25%;
-       }
-      #home,#result{
-        padding:  5rem;
-        margin: 2rem;
-        border: 1px solid white;
-        border-radius: 10px;
-      }
-      .mission p {
-        font-size: 1.5rem;
-        padding: 0 2rem;
-        margin: 0;
-      }
-      .ast {
-        margin-left: 3rem;
-      }
-      #a-instructions,#b-instructions{
-        font-family:  Helvetica, sans-serif;
-        text-align: left;
-        padding-left: 2rem;
-      }
-      #a-instructions .row {
-        margin: 1rem;
-      }
-      #b-instructions .row {
-        margin: 1rem;
-      }
-      
-    </style>
+    <link href="style.css" rel="stylesheet"> 
+    
   </head>
   <body >
         <div class="tab-content" id="myTabContent">
@@ -95,6 +22,8 @@
 
                           <h3 class="lead">Navigation &amp; Shooting</h3>
                         <div class="row">
+
+                          <p>The ship starts out with 5 health points, HP decreases on impact with asteroids</p>
                           <p>If you collide with an asteroid you can evade more damage by navigating away</p>
                           <div class="col-6 p-0">
                             <img src="leftright.svg" width="150px" height="100px">
@@ -122,8 +51,8 @@
                       <img class="ast" src="asteroid.svg" width="50px" height="50px">
                     </div>
                     <div class="col-6 p-0">
-                      <p>Causes 1-2 Damage</p>
-                      <p>+10 Points</p>
+                      <p>Causes <b>1-2</b> Damage</p>
+                      <p><b><u>+10 Points</u></b></p>
                     </div>
                   </div>
                   <div class="row">
@@ -131,8 +60,8 @@
                       <img  class="ast" src="asteroid.svg" width="100px" height="100px">
                     </div>
                     <div class="col-6 p-0">
-                      <p>Causes 2-3 Damage</p>
-                      <p>+30 Points</p>
+                      <p>Causes <b>2-3</b> Damage</p>
+                      <p><b><u>+30 Points</u></b></p>
                     </div>
                   </div>
               </div>
