--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             
                 <div id="a-instructions" class="col-sm-6">
                   <h3 class="lead">Asteroids</h3>
-                  <p>In this asteroid field we have small and large asteriods all causing damage depending on how long the collision last</p>
+                  <p>The asteroid field will have small &and; large asteriods. All causing damage depending on the impact of collision and size</p>
+                  <p>When an asteroid has been shot it will leave a layer of debris; this debris itself is harmless but might be hiding more asteroids beneath it</p>
                  
                   <div class="row">
                     <div class="col-6 p-0">
