--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             
                 <div id="a-instructions" class="col-sm-6">
                   <h3 class="lead">Asteroids</h3>
-                  <p>The asteroid field will have small &and; large asteriods. All causing damage depending on the impact of collision and size</p>
-                  <p>When an asteroid has been shot, it will leave a layer of debris. The debris itself is harmless but might be hiding more asteroids beneath it</p>
+                  <p>The asteroid field will have small &amp; large asteriods. All causing damage depending on the impact of collision and size</p>
+                  <p>When an asteroid has been shot, it will leave a layer of debris. The debris itself is harmless but might be hiding more asteroids beneath.</p>
                  
                   <div class="row">
                     <div class="col-6 p-0">
